# controller/v1/user.go
@@ -35,7 +35,7 @@ type UserController struct {
 //      in: header
 // responses:
 //   '200': body:ListUsers
-//   '400': body:UserLoginFailureResponse
+//   '400': body:FailureResponse
 func (uc *UserController) GetUser(c echo.Context) error {
 
 	userName, isAdmin := auth.IsRequestAdmin(c)
@@ -77,8 +77,8 @@ func (uc *UserController) GetUser(c echo.Context) error {
 //      name: Authorization
 //      in: header
 // responses:
-//   '201': body:UserCreateSuccessfulResponse
-//   '400': body:UserCreateSuccessfulResponse
+//   '201': body:SuccessResponse
+//   '400': body:FailureResponse
 func (uc *UserController) CreateUser(c echo.Context) error {
 
 	// Stub an user to be populated from the body
@@ -133,8 +133,8 @@ func (uc *UserController) CreateUser(c echo.Context) error {
 //      name: Authorization
 //      in: header
 // responses:
-//   '201': body:UserCreateSuccessfulResponse
-//   '400': body:UserCreateSuccessfulResponse
+//   '201': body:SuccessResponse
+//   '400': body:FailureResponse
 func (uc *UserController) UpdateUser(c echo.Context) error {
 
 	// Stub an user to be populated from the body
@@ -183,8 +183,8 @@ func (uc *UserController) UpdateUser(c echo.Context) error {
 //      name: Authorization
 //      in: header
 // responses:
-//   '201': body:UserCreateSuccessfulResponse
-//   '400': body:UserCreateSuccessfulResponse
+//   '201': body:SuccessResponse
+//   '400': body:FailureResponse
 func (uc *UserController) DeleteUser(c echo.Context) error {
 	u := model.TableUser{}
 
@@ -205,15 +205,15 @@ func (uc *UserController) DeleteUser(c echo.Context) error {
 // produces:
 // - application/json
 // parameters:
-// - name: userstruct
+// - name: userLoginStruct
 //   in: body
-//   description: user structure
+//   description: user login structure
 //   schema:
 //     "$ref": "#/definitions/UserLogin"
 //   required: true
 // responses:
-//   '201': body:UserCreateSuccessfulResponse
-//   '400': body:UserCreateSuccessfulResponse
+//   '201': body:UserLoginSuccessResponse
+//   '400': body:FailureResponse
 func (uc *UserController) LoginUser(c echo.Context) error {
 	u := model.UserloginDetails{}
 	if err := c.Bind(&u); err != nil {
